Fixed Kanye misspelling Fixed iPhone 6 artist name + bot label wrapping

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -70,10 +70,10 @@
 
      @media only screen and (max-width: 480px) {
       span.name {
-        font-size: 2em;
+        font-size: 1.8em;
       }
       span.bot {
-        font-size: 1.5em;
+        font-size: 1.4em;
       }
     }
 
